--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>Угадай мелодию</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/main.min.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -32,6 +33,9 @@
       <a class="copyright__logo" href="https://htmlacademy.ru"><img src="img/logo-htmla.svg" width="144" height="49" alt="HTML Academy"></a>
       <p class="copyright__text">Сделано в <a class="copyright__link" href="https://htmlacademy.ru">HTML Academy</a></p>
     </section>
+
   </footer>
+
+  <script src="bundle.js"></script>
 </body>
 </html>
